# wtr

./: .gitignore  .pre-commit-config.yaml  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
wtr/: main.py
