[metadata]
name = wtr
version = 0.0.1
description = A command-line app to fetch the weather data for a place.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/madhusoodhanan96/wtr
author = Madhusoodhanan A
author_email = a.madhusoodhananan1996@gmail.com
license = GPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    requests==2.27.1
python_requires = ~=3.10

[options.entry_points]
console_scripts =
    wtr = wtr.main:main

[options.extras_require]
test =
    coverage
    pytest
